HT/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-go-api-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: my-go-api
